# perf-analyzer

./: Cargo.toml  README.md
src/: csv.rs  errors.rs  main.rs
src/cli/: mod.rs
