[package]
name = "perf-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
polars = { version = "0.39.2", features = ["lazy"] }
thiserror = "1.0.58"
